<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bill_expert"
    app:startDestination="@id/nav_splash">

    <fragment
        android:id="@+id/nav_splash"
        android:name="pl.szkoleniaandroid.billexpert.SplashFragment">
        <action
            android:id="@+id/nav_splash_signed_in"
            app:destination="@id/nav_bills"
            app:popUpTo="@id/nav_splash"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/nav_splash_not_signed_in"
            app:destination="@id/nav_sign_in"
            app:popUpTo="@id/nav_splash"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/nav_sign_in"
        android:name="pl.szkoleniaandroid.billexpert.features.signin.SignInFragment">

        <action
            android:id="@+id/nav_signed_in"
            app:destination="@id/nav_bills"
            app:popUpTo="@id/nav_sign_in"
            app:popUpToInclusive="true" />
    </fragment>


    <fragment
        android:id="@+id/nav_bills"
        android:name="pl.szkoleniaandroid.billexpert.features.bills.BillsListFragment">

        <action
            android:id="@+id/nav_logged_out"
            app:destination="@id/nav_sign_in"
            app:popUpTo="@id/nav_bills"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/nav_details"
        android:name="pl.szkoleniaandroid.billexpert.features.billdetails.BillDetailsFragment">

        <argument
            android:name="bill"
            android:defaultValue="@null"
            app:argType="pl.szkoleniaandroid.billexpert.domain.model.Bill"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_admin"
        android:name="pl.szkoleniaandroid.billexpert.features.admin.AdminFragment" />

</navigation>